# controllers/validController.ts
@@ -1,25 +1,20 @@
 import { Request, Response, NextFunction } from 'express';
-import {role} from '../constants'
+import {RESPONSE_STATUS} from '../constants';
 
 export const validate=async(req:Request,res:Response,next:NextFunction):Promise<void>=>{
     try{
           if(!req.body.user_name || !req.body.password || !req.body.role)
           {
-            res.status(400).send('User Name OR Password OR Role Is Required');
+            res.status(RESPONSE_STATUS.BAD_REQUEST).send({error:"User Name OR Password OR Role Is Required"});
             return;
           }
           else{
-                
-                if(Object.keys(req.body).length>3)
-                {res.status(400).send('Extra field not allowed');
-               return;}
-               else{
-                  if(!(req.body.role==role.ADMIN)&&!(req.body.role==role.USER))
-                  {
-                        res.status(400).send('role is not available');
-                        return;  
-                  }
-               }
+                 if(Object.keys(req.body).length!=3)
+                 {
+                        res.status(RESPONSE_STATUS.BAD_REQUEST).send({error:"Required fields not available"});
+                        return;
+                 }
+              
           }
       
     }
@@ -27,7 +22,7 @@ export const validate=async(req:Request,res:Response,next:NextFunction):Promise<
     {
         //Internal server error
         //console.error(err.message);
-        res.status(500).send({message:"failed To get request"+err.message});
+        res.status(RESPONSE_STATUS.INTERNAL_SERVER_ERROR).send({message:"failed To get request"+err.message});
     }
     next();
 }
